--- a/exam-review.html
+++ b/exam-review.html
@@ -9,6 +9,21 @@
     <h1>Yi Li</h1>
     <h4 class="subhed">2-Year Master</h4>
     <p>A photojournalism student</p>
+    <h2>Coursework</h2>
+    <ul>
+      <li><a href="https://journalism.utexas.edu" target="_blank">Photography for Reporting Texas</a></li>
+      <li><a href="https://journalism.utexas.edu">Advanced Visual Journalism</a></li>
+      <li><a href="https://journalism.utexas.edu">Intro Coding for Journalist</a></li>
+    </ul>
+    <h2>Skills</h2>
+    <ul>
+      <li>writing</li>
+      <li>photography</li>
+      <li>photo editing</li>
+      <li>video editing</li>
+      <li>audio editing</li>
+      <li>data visulization</li>
+    </ul>
   </div>
 
 </body>
