--- a/exam-review.html
+++ b/exam-review.html
@@ -9,12 +9,15 @@
     <h1>Yi Li</h1>
     <h4 class="subhed">2-Year Master</h4>
     <p>A photojournalism student</p>
+    <div class="left-column">
     <h2>Coursework</h2>
     <ul>
       <li><a href="https://journalism.utexas.edu" target="_blank">Photography for Reporting Texas</a></li>
       <li><a href="https://journalism.utexas.edu">Advanced Visual Journalism</a></li>
       <li><a href="https://journalism.utexas.edu">Intro Coding for Journalist</a></li>
     </ul>
+  </div>
+  <div class="right-column">
     <h2>Skills</h2>
     <ul>
       <li>writing</li>
@@ -24,6 +27,7 @@
       <li>audio editing</li>
       <li>data visulization</li>
     </ul>
+  </div>
   </div>
 
 </body>
